brat/test/golden/error/fanout-not-enough-overs.brat.golden
Error in test/golden/error/fanout-not-enough-overs.brat@FC {start = Pos {line = 2, col = 5}, end = Pos {line = 2, col = 13}}:
f = { [/\] }
    ^^^^^^^^

  Internal error: Expected empty thunk leftunders, got:
  (c1 :: Nat)

